[package]
name = "ctf-pow-for-docker-compose"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
base64 = "0.21.7"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
fs_extra = "1.3.0"
log = "0.4.20"
rand = "0.8.5"
sha2 = "0.10.8"
thiserror = "1.0.57"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
